# manifest-modifier

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  release.toml
examples/: api.http
examples/app/: Dockerfile
manifest-filter/: Cargo.toml
manifest-filter/manifests/: master.m3u8  media.m3u8
manifest-filter/src/: lib.rs
manifest-server/: Cargo.toml
manifest-server/src/: main.rs
src/: lib.rs
