[package]
name = "manifest-filter"
description = "lib to modify video manifests"
version = "0.1.1-beta.3"
edition = "2021"
authors = ["Maurício Antunes <mauricio.abreua@gmail.com>"]
license = "MIT"
homepage = "https://github.com/mauricioabreu/manifest-modifier"
repository = "https://github.com/mauricioabreu/manifest-modifier"
readme = "../README.md"
keywords = ["video", "hls"]
categories = ["multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m3u8-rs = "5.0.2"
